--- a/src/main/resources/templates/leaders.html
+++ b/src/main/resources/templates/leaders.html
@@ -18,14 +18,14 @@
 
 <hr>
 
-<a th:href="@{/api/realty-management/realtor/v1/realtors-verification}">Come To Realtor Add Page</a>
+<a th:href="@{/realtor/v1/realtors-verification}">Come To Realtor Add Page</a>
 
 <hr>
 
-<a th:href="@{/api/realty-management/realtor/v1/realtors/delete}">Come To Realtor Delete Page</a>
+<a th:href="@{/realtor/v1/realtors/delete}">Come To Realtor Delete Page</a>
 
 <hr>
 
-<a th:href="@{/api/realty-management/admin/v1/login-success}">Back To Home Page</a>
+<a th:href="@{/admin/v1/login-success}">Back To Home Page</a>
 </body>
 </html>
