--- a/src/main/resources/templates/realtorsRegister-successed.html
+++ b/src/main/resources/templates/realtorsRegister-successed.html
@@ -11,7 +11,7 @@
 <span th:text="${message}" th:style="'font-size: 18px; font-weight: bold; color: black'"></span><br>
 
 
-<a th:href="@{/api/realty-management/admin/v1/login}" class="btn btn-primary">
+<a th:href="@{/admin/v1/login}" class="btn btn-primary">
     Login Page Continue
 </a>
 
