--- a/src/main/resources/templates/register-successed.html
+++ b/src/main/resources/templates/register-successed.html
@@ -14,7 +14,7 @@
 <span th:text="${token}" id="token"></span><br>
 <h1>Lütfen Tokeni Kaybetme!</h1>
 
-<a th:href="@{/api/realty-management/admin/v1/login}" class="btn btn-primary">
+<a th:href="@{/admin/v1/login}" class="btn btn-primary">
     Login Page Continue
 </a>
 
