--- a/src/main/resources/templates/systems.html
+++ b/src/main/resources/templates/systems.html
@@ -18,19 +18,19 @@
 
 <hr>
 
-<a th:href="@{/api/realty-management/advert/v1/adverts-delete}">Come To Delete Advert Page</a>
+<a th:href="@{/advert/v1/adverts-delete}">Come To Delete Advert Page</a>
 
 <hr>
 
-<a th:href="@{/api/realty-management/advert/v1/advert-list}">Come To Advert List Page</a>
+<a th:href="@{/advert/v1/advert-list}">Come To Advert List Page</a>
 
 
 <hr>
 
-<a th:href="@{/api/realty-management/advert/v1/adverts}">Come To Add Advert Page</a>
+<a th:href="@{/advert/v1/adverts}">Come To Add Advert Page</a>
 
 <hr>
 
-<a th:href="@{/api/realty-management/admin/v1/login-success}">Back To Home Page</a>
+<a th:href="@{/admin/v1/login-success}">Back To Home Page</a>
 </body>
 </html>
