--- a/src/main/resources/templates/accessDenied.html
+++ b/src/main/resources/templates/accessDenied.html
@@ -10,7 +10,7 @@
 
 <hr>
 
-<a th:href="@{/api/realty-management/admin/v1/login-success}">Back to Home Page</a>
+<a th:href="@{/admin/v1/login-success}">Back to Home Page</a>
 
 </body>
 </html>
