--- a/src/main/resources/templates/realtorsRegister.html
+++ b/src/main/resources/templates/realtorsRegister.html
@@ -9,7 +9,7 @@
 <h2>Realtor Kayıt etme</h2>
 <hr>
 
-<form id="registerForm" th:action="@{/api/realty-management/realtor/v1/realtors}" th:object="${realtorsRegisterForm}" th:method="post">
+<form id="registerForm" th:action="@{/realtor/v1/realtors}" th:object="${realtorsRegisterForm}" th:method="post">
 
     <label for="code">E-posta Adresinize Gelen Kodu Giriniz:</label>
     <input type="number" id="code" name="code" th:field="*{code}" required /><br>
