--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
 <h2>Admin Kayıt olma</h2>
 <hr>
 
-<form id="registerForm" th:action="@{/api/realty-management/admin/v1/admins}" th:object="${registerForm}" th:method="post">
+<form id="registerForm" th:action="@{/admin/v1/admins}" th:object="${registerForm}" th:method="post">
 
     <label for="code">E-posta Adresinize Gelen Kodu Giriniz:</label>
     <input type="number" id="code" name="code" th:field="*{code}" required /><br>
@@ -35,7 +35,5 @@
     <button type="submit" id="btn">Kayıt Ol</button>
 </form>
 
-<!-- th:src="@{/assets/js/register.js}" -->
-<script></script>
 </body>
 </html>
